add basic jlink setup