@@ -1,6 +1,7 @@
 plugins {
     id("myproject.java-conventions")
     application
+    id("org.beryx.jlink") version "3.1.1"
 }
 
 dependencies {
@@ -8,6 +9,14 @@ dependencies {
 }
 
 application {
+    applicationDefaultJvmArgs = listOf("-ea", "--enable-preview", "-XX:+UseCompressedOops")
     mainModule = "org.gradle.sample.app"
     mainClass = "org.gradle.sample.app.Main"
+}
+
+jlink {
+    addOptions("--strip-debug", "--compress", "zip-6", "--no-header-files", "--no-man-pages")
+    launcher {
+        name = "main"
+    }
 }
